data/derived/sp14/progs/unify/prog3639.ml.out
Characters 61-63:
  if List.length l1 = List.length l2 then l1 l2;;
                                          ^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
